# advent-of-code-2018

./: AdventOfCode.cpp  AdventOfCodeConfig.h  AdventOfCodeConfig.h.in  CMakeLists.txt  Dockerfile
ci/: all.sh  build-and-run.sh  run-tests.sh  run.sh
src/: CMakeLists.txt  Day1.cpp  Day1.h  Day1Test.cpp  Day2.cpp  Day2.h  Day2Test.cpp  Day3.cpp  Day3.h  Day4.cpp  Day4.h  Day5.cpp  Day5.h  Day6.cpp  Day6.h  Day7.cpp  Day7.h  FileReader.cpp
src/tests/: Day1Test.cpp  Day2Test.cpp  Day3Test.cpp  Day4Test.cpp  Day5Test.cpp  Day6Test.cpp  Day7Test.cpp
src/utils/: FileReader.h
